src/styles.css
/* global styles */
*,
*::before,
*::after {
	padding: 0;
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

@media screen and (min-width: 500px) {
	.App {
		padding: 0 10vw;
	}
}
@media screen and (min-width: 700px) {
	.App {
		padding: 0 15vw;
	}
}
/* header section */
header {
	margin: 0 0 3rem;
}
.top-btn-container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.btn.top-btn {
	width: 70vw;
}
@media screen and (min-width: 450px) {
	.btn.top-btn {
		width: 50vw;
	}
}

/* Big Item list component */
.btn-search-area {
	padding: 3rem 0 0 0;
}

/* Search bar */
.searchBar {
	width: 20rem;
	padding: 0.25rem;
}

/* Button area styles */
.item-btns {
	display: grid;
	grid-template-columns: 1fr;
}

@media screen and (min-width: 500px) {
	.item-btns {
		display: grid;
		grid-template-columns: 1fr 1fr;
	}
}

@media screen and (min-width: 700px) {
	.item-btns {
		display: grid;
		grid-template-columns: 1fr 1fr 1fr;
	}
}

@media screen and (min-width: 900px) {
	.item-btns {
		display: grid;
		grid-template-columns: 1fr 1fr 1fr 1fr;
	}
}

/* Button styles */
.btn-container {
	margin: 0.5rem;
}
.btn {
	width: 100%;
	height: 2rem;
	font-size: 1rem;
	background-color: #dedede;
	border: 1px solid black;
	border-radius: 999px;
}

